--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     </div><!-- .wrapper -->
 
-    <section id="details shadow">
+    <section id="details border-right">
       <div class="wrapper clearfix">
         <div class="col-1 first">
           <h3>Contact</h3>
@@ -76,7 +76,7 @@
           </address>
         </div>
 
-        <div class="col-1">
+        <div class="col-1 border-right">
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
